# mp4rs

./: .gitignore  Cargo.toml
examples/: sample.rs
src/: boxes.rs  error.rs  lib.rs  reader.rs  types.rs
src/boxes/: avc1.rs  ctts.rs  dinf.rs  dref.rs  edts.rs  ftyp.rs  hdlr.rs  mdhd.rs  mdia.rs  minf.rs  moov.rs  mvhd.rs  pasp.rs  phtm.rs  smhd.rs  stbl.rs  stco.rs  stsc.rs  stsd.rs  stss.rs  stsz.rs  stts.rs  tkhd.rs  trak.rs  url.rs  vmhd.rs
